Change Log

xadrpy-0.1.2
* add html
* add sandbox
* add fabfile

xadrpy-0.1.1
* Add changelog
* Reorganize VERSION
* Add xadrpy base command