@@ -1,2 +1,18 @@
 xadrpy
 ======
+
+`xadrpy` it's easy django and python toolkit
+
+Setup
+-----
+
+Install the package with [pip][] or [git][]:
+
+    pip install xadrpy
+    
+    # or ...
+    
+    pip install -e git://github.com/pacsee/xadrpy.git#egg=xadrpy
+
+[pip]: http://pip.openplans.org/
+[git]: http://git-scm.com/
