@@ -1,2 +1,3 @@
 Django==1.3.1
 argparse==1.2.1
+unittest2==0.5.1
