@@ -1,2 +1,3 @@
 from jsonlib_tests import *
 from primitives_tests import *
+from inspector_tests import *
